gke-lb-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-fastapi
  labels:
    app: oauth2-fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-fastapi
  template:
    metadata:
      labels:
        app: oauth2-fastapi
    spec:
      containers:
        - name: oauth2-fastapi
          image: gcr.io/poc-data-platform-289915/oauth2-fastapi:v1.0.3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 128Mi
              # must specify requests for CPU to enable autoscale
              # based on CPU utilization
              cpu: "150m"
            limits:
              memory: 256Mi
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 20
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-fastapi-service
  labels:
    app: oauth2-fastapi
spec:
  type: LoadBalancer
  selector:
    app: oauth2-fastapi
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80
